# opsml-cli

./: .dockerignore  .drone.yml  .gitignore  .tool-versions  Cargo.toml  Dockerfile  Makefile  README.md  infraspec.yaml  makefile  pyproject.toml  setup.cfg  sonar-project.properties
.github/: CODEOWNERS  reviewer_config.yml
.github/workflows/: lint-testing.yml  release.yml
src/: main.rs
src/api/: cards.rs  cli.rs  command_structs.rs  commands.rs  download_artifacts.rs  download_file.rs  launch_app.rs  list_cards.rs  metrics.rs  mod.rs  model.rs  route_helper.rs  types.rs  utils.rs
src/api/test_utils/: compare_metric.json  list_cards.json  list_files.json  list_metric.json  metadata.json  metadata_non_onnx.json  metadata_onnx.json
src/api/test_utils/6a1e3038-b641-4472-8cbe-1ff55b9d66ed/: metadata.json  model.pkl
src/api/utils/: route_helper.rs  utils.rs
tests/: test_poetry_template.py
tests/integration/: test_integration.py
