[tool.poetry]
name = "opsml-cli"
version = "0.1.0"
description = "Rust-based CLI for interacting with OpsML"
readme = "README.md"
authors = ["Thorrester <48217609+thorrester@users.noreply.github.com>"]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[tool.poetry.group.dev.dependencies]
opsml = {extras = ["server"], version = "^1.4.14"}

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin" 
strip = true 
features = ["pyo3/extension-module"]

[project]
name = "opsml-cli"
requires-python = ">=3.9,<3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
"Homepage" = "https://github.com/shipt/opsml-cli"
"Source Code" = "https://github.com/shipt/opsml-cli"
"Issues" = "https://github.com/shipt/opsml-cli/issues"