[tool.poetry]
name = "opsml-cli"
version = "0.4.3"
description = "Rust-based CLI for interacting with OpsML"
readme = "README.md"
authors = [
    { name = 'Steven Forrester', email = 'steven.forrester@shipt.com' }
]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin" 
strip = true 

[project]
name = "opsml-cli"
requires-python = ">=3.9,<3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
"Homepage" = "https://github.com/shipt/opsml-cli"
"Source Code" = "https://github.com/shipt/opsml-cli"
"Issues" = "https://github.com/shipt/opsml-cli/issues"